manifests/dev/postgresql/StatefulSet-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgres
    app.kubernetes.io/version: "18.6"
    helm.sh/chart: postgres-1.6.8
  name: postgresql
  namespace: postgresql
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/name: postgres
  serviceName: postgresql
  template:
    metadata:
      annotations:
        checksum/customconfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/customscripts: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/scripts: 78cbb2a9f9ebaf7b1e1fbfa862846bc47deb691fe69cab2870d5164dd48ed819
        checksum/secureconfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app.kubernetes.io/instance: postgresql
        app.kubernetes.io/name: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: adminPassword
                  name: postgresql-password
            - name: PGDATA
              value: /var/lib/postgresql/data/pg
          image: docker.io/pgvector/pgvector:pg17
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -h localhost
            failureThreshold: 10
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 30
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -h localhost
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -h localhost
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /var/run
              name: run
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: scripts
            - mountPath: /etc/postgresql
              name: configs
      nodeSelector:
        kubernetes.io/hostname: edgenix
      securityContext:
        fsGroup: 999
        supplementalGroups:
          - 999
      serviceAccountName: default
      volumes:
        - emptyDir: {}
          name: run
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: scripts
        - emptyDir: {}
          name: configs
        - configMap:
            defaultMode: 365
            name: postgresql-scripts
          name: initscripts
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgresql-data
  updateStrategy:
    type: RollingUpdate
