manifests/dev/postgresql/Service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgres
    app.kubernetes.io/version: "18.6"
    helm.sh/chart: postgres-1.6.8
  name: postgresql
  namespace: postgresql
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/name: postgres
  type: ClusterIP
